# kubernetes-brief

Brief-kubernetes/: api-ingress.yaml  api.yaml  frontend.yaml  ingress.yaml  mysql.yaml  readme.md  secret.yaml
Brief-kubernetes/frontend/: Dockerfile  frontend.py  pyproject.toml
Minikube/: configmap.yaml  mongodb.yaml  mongoexpress.yaml  readme.md  secret.yaml
