[project]
name = "frontend"
version = "0.1.0"
description = ""
authors = [
  { name = "Manon Platteau", email = "manon-platteau@orange.fr" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.3",
    "streamlit>=1.51.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
